[gd_scene load_steps=85 format=3 uid="uid://iv3xudjy0got"]

[ext_resource type="Script" path="res://scripts/enemies/bigCookie/cookie.gd" id="1_fe4y1"]
[ext_resource type="Texture2D" uid="uid://dabxhdh3jryha" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform1.png" id="1_wl17y"]
[ext_resource type="Texture2D" uid="uid://bp15860qaojgs" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform2.png" id="2_82j3n"]
[ext_resource type="Texture2D" uid="uid://b603qdti67elr" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform3.png" id="3_12fkt"]
[ext_resource type="Texture2D" uid="uid://uctgjvqad2wn" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform4.png" id="4_0wi20"]
[ext_resource type="Texture2D" uid="uid://86ytxiiwjq8w" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform5.png" id="5_bucjf"]
[ext_resource type="Texture2D" uid="uid://brpcbmsq0d44x" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform6.png" id="6_7veno"]
[ext_resource type="Texture2D" uid="uid://dfi48v3rv0cpt" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform7.png" id="7_krjrs"]
[ext_resource type="Texture2D" uid="uid://cjj4y8qifct1q" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform8.png" id="8_dhsb1"]
[ext_resource type="Texture2D" uid="uid://cgwclqbhpbke5" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform9.png" id="9_ain83"]
[ext_resource type="Texture2D" uid="uid://bjgle28ojmeyb" path="res://sprites/enemies/bigCookie/black/transform/trakingPtransform10.png" id="10_7bmeq"]
[ext_resource type="Texture2D" uid="uid://bj2yu8ceuadn5" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto1.png" id="11_wrstt"]
[ext_resource type="Texture2D" uid="uid://vfrn2vjn2wbl" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto2.png" id="12_5wghj"]
[ext_resource type="Texture2D" uid="uid://cb1ekkm8i61wu" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto3.png" id="13_g5v1t"]
[ext_resource type="Texture2D" uid="uid://chjox0impbwx1" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto4.png" id="14_3mxps"]
[ext_resource type="Texture2D" uid="uid://wat0eba3n1la" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto5.png" id="15_u3pvm"]
[ext_resource type="Texture2D" uid="uid://c626ncdus3wr8" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto6.png" id="16_bikig"]
[ext_resource type="Texture2D" uid="uid://celly4jdrysh0" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto7.png" id="17_kif5a"]
[ext_resource type="Texture2D" uid="uid://b38a8kdsxycyd" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto8.png" id="18_bbyj1"]
[ext_resource type="Texture2D" uid="uid://ct2oqm15vdlwe" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto9.png" id="19_sqa54"]
[ext_resource type="Texture2D" uid="uid://cduq0x3npfb5d" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto10.png" id="20_876gl"]
[ext_resource type="Texture2D" uid="uid://cct5h4f5ts0bp" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto11.png" id="21_qeejd"]
[ext_resource type="Texture2D" uid="uid://c5n3dv01hwnbr" path="res://sprites/enemies/bigCookie/black/attack/trakingATAQUEpreto12.png" id="22_2ttat"]
[ext_resource type="Texture2D" uid="uid://c3agwj8u83wsr" path="res://sprites/enemies/bigCookie/black/idle/trakingPparado1.png" id="23_wte4u"]
[ext_resource type="Texture2D" uid="uid://cocqkxe5cetnq" path="res://sprites/enemies/bigCookie/black/idle/trakingPparado2.png" id="24_fasfu"]
[ext_resource type="Texture2D" uid="uid://8upow4rinkpc" path="res://sprites/enemies/bigCookie/black/idle/trakingPparado3.png" id="25_y14xs"]
[ext_resource type="Texture2D" uid="uid://bgcxduxpsfult" path="res://sprites/enemies/bigCookie/black/idle/trakingPparado4.png" id="26_13wyx"]
[ext_resource type="Texture2D" uid="uid://bf2urtbr3oqa0" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto1.png" id="27_fsmjh"]
[ext_resource type="Texture2D" uid="uid://dlkvyl3l1g0qc" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto2.png" id="28_sylgy"]
[ext_resource type="Texture2D" uid="uid://bs24eldhveh1q" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto3.png" id="29_3v8ry"]
[ext_resource type="Texture2D" uid="uid://d0jguca1agft3" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto4.png" id="30_rmv7i"]
[ext_resource type="Texture2D" uid="uid://htpocmlpba8u" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto5.png" id="31_f7van"]
[ext_resource type="Texture2D" uid="uid://c2om71dve77mr" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto6.png" id="32_6jcw5"]
[ext_resource type="Texture2D" uid="uid://856v1lf33n8" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto7.png" id="33_xy0vi"]
[ext_resource type="Texture2D" uid="uid://b4rkabmx82fme" path="res://sprites/enemies/bigCookie/black/run/trakingparadopreto8.png" id="34_jqe38"]
[ext_resource type="Texture2D" uid="uid://cp1rnu2y5egcu" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform1.png" id="35_186y8"]
[ext_resource type="Texture2D" uid="uid://dffdhmrt06d6" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform2.png" id="36_g4v4p"]
[ext_resource type="Texture2D" uid="uid://coqk8qk8ej6k2" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform3.png" id="37_hn1cn"]
[ext_resource type="Texture2D" uid="uid://bgb6vc0pnu2t0" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform4.png" id="38_rqpij"]
[ext_resource type="Texture2D" uid="uid://duo34sbi7ov31" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform5.png" id="39_uoiu1"]
[ext_resource type="Texture2D" uid="uid://dp684tc5erjlr" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform6.png" id="40_aqref"]
[ext_resource type="Texture2D" uid="uid://dl1vkc4mn5mmn" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform7.png" id="41_5dsry"]
[ext_resource type="Texture2D" uid="uid://dd1jfv4a06gr3" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform8.png" id="42_ijv3y"]
[ext_resource type="Texture2D" uid="uid://r0w3woyx68p3" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform9.png" id="43_uh80d"]
[ext_resource type="Texture2D" uid="uid://bpa56pgaudflm" path="res://sprites/enemies/bigCookie/white/transform/trakingBtransform10.png" id="44_4o2c3"]
[ext_resource type="Texture2D" uid="uid://d1xa8vht8hbml" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco1.png" id="45_n5a3g"]
[ext_resource type="Texture2D" uid="uid://nh0g8usklu5w" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco2.png" id="46_gebho"]
[ext_resource type="Texture2D" uid="uid://dxgiawtl4ywp5" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco3.png" id="47_wkedo"]
[ext_resource type="Texture2D" uid="uid://cm7qfr6txt6dn" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco4.png" id="48_oo8sv"]
[ext_resource type="Texture2D" uid="uid://b45o3nsfphymx" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco5.png" id="49_h3q1i"]
[ext_resource type="Texture2D" uid="uid://dr4a45nmhjsdv" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco6.png" id="50_5ngvw"]
[ext_resource type="Texture2D" uid="uid://clqtfhja1c2x7" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco7.png" id="51_eg8rx"]
[ext_resource type="Texture2D" uid="uid://b33euxevsr5mw" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco8.png" id="52_2ujif"]
[ext_resource type="Texture2D" uid="uid://d0kvsabecygsl" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco9.png" id="53_d2xrg"]
[ext_resource type="Texture2D" uid="uid://c3r546ok130dy" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco10.png" id="54_o4rux"]
[ext_resource type="Texture2D" uid="uid://cgevesxcto1uo" path="res://sprites/enemies/bigCookie/white/attack/trakingATAQUEbranco11.png" id="55_cbgur"]
[ext_resource type="Texture2D" uid="uid://fc1pc0w02dm7" path="res://sprites/enemies/bigCookie/white/idle/trakingBparado1.png" id="56_4qn4t"]
[ext_resource type="Texture2D" uid="uid://l578xq5sjfhg" path="res://sprites/enemies/bigCookie/white/idle/trakingBparado2.png" id="57_m3efk"]
[ext_resource type="Texture2D" uid="uid://k4tagg55cs8p" path="res://sprites/enemies/bigCookie/white/idle/trakingBparado3.png" id="58_ipe3t"]
[ext_resource type="Texture2D" uid="uid://dylc2lmp1f41x" path="res://sprites/enemies/bigCookie/white/idle/trakingBparado4.png" id="59_5jc03"]
[ext_resource type="Texture2D" uid="uid://cd8cmgmqfjwcv" path="res://sprites/enemies/bigCookie/white/run/trankingAndando1.png" id="60_ciym7"]
[ext_resource type="Texture2D" uid="uid://cm1jemdf4uoob" path="res://sprites/enemies/bigCookie/white/run/trakingAndando2.png" id="61_uq3fr"]
[ext_resource type="Texture2D" uid="uid://bvvfphlueq8lf" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (1).png" id="62_o7w6d"]
[ext_resource type="Texture2D" uid="uid://c15vvc2m71luk" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (2).png" id="63_7xut0"]
[ext_resource type="Texture2D" uid="uid://dqb8lpde0dygs" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (3).png" id="64_gd78k"]
[ext_resource type="Texture2D" uid="uid://c60lsj2yp4uyd" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (4).png" id="65_7jy7r"]
[ext_resource type="Texture2D" uid="uid://dfybvn224ai07" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (5).png" id="66_hux7v"]
[ext_resource type="Texture2D" uid="uid://b7stc7b53ceis" path="res://sprites/enemies/bigCookie/white/run/trakingAndando3 (6).png" id="67_6oeab"]
[ext_resource type="PackedScene" uid="uid://cdiki20gqftah" path="res://scenes/enemies/ui/healthBar.tscn" id="68_ipd0w"]
[ext_resource type="FontFile" uid="uid://l2iyicn4hyea" path="res://assets/font/thaleah_fat.ttf" id="69_kg0hp"]
[ext_resource type="Script" path="res://scripts/enemies/bigCookie/anim.gd" id="69_xwdeg"]
[ext_resource type="AudioStream" uid="uid://mdgd050krid8" path="res://assets/fx/effects/afterBossDeath.mp3" id="71_2srto"]
[ext_resource type="AudioStream" uid="uid://xo6ais462mb5" path="res://assets/fx/effects/bossDamage.mp3" id="72_mg715"]
[ext_resource type="Script" path="res://scripts/states/stateMachine.gd" id="73_0ge2k"]
[ext_resource type="Script" path="res://scripts/enemies/bigCookie/cookieIdle.gd" id="74_ihnij"]
[ext_resource type="Script" path="res://scripts/enemies/bigCookie/cookieChase.gd" id="75_mc83i"]
[ext_resource type="Script" path="res://scripts/enemies/bigCookie/cookieTransform.gd" id="77_gygej"]
[ext_resource type="Script" path="res://scripts/enemies/bigCookie/cookieAttack.gd" id="78_11of4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qi6nh"]
radius = 54.4518

[sub_resource type="CircleShape2D" id="CircleShape2D_2nat3"]
radius = 30.0666

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmf0d"]
size = Vector2(10, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_73eu5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_wl17y")
}, {
"duration": 1.0,
"texture": ExtResource("2_82j3n")
}, {
"duration": 1.0,
"texture": ExtResource("3_12fkt")
}, {
"duration": 1.0,
"texture": ExtResource("4_0wi20")
}, {
"duration": 1.0,
"texture": ExtResource("5_bucjf")
}, {
"duration": 1.0,
"texture": ExtResource("6_7veno")
}, {
"duration": 1.0,
"texture": ExtResource("7_krjrs")
}, {
"duration": 1.0,
"texture": ExtResource("8_dhsb1")
}, {
"duration": 1.0,
"texture": ExtResource("9_ain83")
}, {
"duration": 1.0,
"texture": ExtResource("10_7bmeq")
}],
"loop": true,
"name": &"black2white",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_wrstt")
}, {
"duration": 1.0,
"texture": ExtResource("12_5wghj")
}, {
"duration": 1.0,
"texture": ExtResource("13_g5v1t")
}, {
"duration": 1.0,
"texture": ExtResource("14_3mxps")
}, {
"duration": 1.0,
"texture": ExtResource("15_u3pvm")
}, {
"duration": 1.0,
"texture": ExtResource("16_bikig")
}, {
"duration": 1.0,
"texture": ExtResource("17_kif5a")
}, {
"duration": 1.0,
"texture": ExtResource("18_bbyj1")
}, {
"duration": 1.0,
"texture": ExtResource("19_sqa54")
}, {
"duration": 1.0,
"texture": ExtResource("20_876gl")
}, {
"duration": 1.0,
"texture": ExtResource("21_qeejd")
}, {
"duration": 1.0,
"texture": ExtResource("22_2ttat")
}],
"loop": true,
"name": &"blackAttack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_wte4u")
}, {
"duration": 1.0,
"texture": ExtResource("24_fasfu")
}, {
"duration": 1.0,
"texture": ExtResource("25_y14xs")
}, {
"duration": 1.0,
"texture": ExtResource("26_13wyx")
}],
"loop": true,
"name": &"blackIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_fsmjh")
}, {
"duration": 1.0,
"texture": ExtResource("28_sylgy")
}, {
"duration": 1.0,
"texture": ExtResource("29_3v8ry")
}, {
"duration": 1.0,
"texture": ExtResource("30_rmv7i")
}, {
"duration": 1.0,
"texture": ExtResource("31_f7van")
}, {
"duration": 1.0,
"texture": ExtResource("32_6jcw5")
}, {
"duration": 1.0,
"texture": ExtResource("33_xy0vi")
}, {
"duration": 1.0,
"texture": ExtResource("34_jqe38")
}],
"loop": true,
"name": &"blackRun",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_186y8")
}, {
"duration": 1.0,
"texture": ExtResource("36_g4v4p")
}, {
"duration": 1.0,
"texture": ExtResource("37_hn1cn")
}, {
"duration": 1.0,
"texture": ExtResource("38_rqpij")
}, {
"duration": 1.0,
"texture": ExtResource("39_uoiu1")
}, {
"duration": 1.0,
"texture": ExtResource("40_aqref")
}, {
"duration": 1.0,
"texture": ExtResource("41_5dsry")
}, {
"duration": 1.0,
"texture": ExtResource("42_ijv3y")
}, {
"duration": 1.0,
"texture": ExtResource("43_uh80d")
}, {
"duration": 1.0,
"texture": ExtResource("44_4o2c3")
}],
"loop": false,
"name": &"white2black",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("45_n5a3g")
}, {
"duration": 1.0,
"texture": ExtResource("46_gebho")
}, {
"duration": 1.0,
"texture": ExtResource("47_wkedo")
}, {
"duration": 1.0,
"texture": ExtResource("48_oo8sv")
}, {
"duration": 1.0,
"texture": ExtResource("49_h3q1i")
}, {
"duration": 1.0,
"texture": ExtResource("50_5ngvw")
}, {
"duration": 1.0,
"texture": ExtResource("51_eg8rx")
}, {
"duration": 1.0,
"texture": ExtResource("52_2ujif")
}, {
"duration": 1.0,
"texture": ExtResource("53_d2xrg")
}, {
"duration": 1.0,
"texture": ExtResource("54_o4rux")
}, {
"duration": 1.0,
"texture": ExtResource("55_cbgur")
}],
"loop": false,
"name": &"whiteAttack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("56_4qn4t")
}, {
"duration": 1.0,
"texture": ExtResource("57_m3efk")
}, {
"duration": 1.0,
"texture": ExtResource("58_ipe3t")
}, {
"duration": 1.0,
"texture": ExtResource("59_5jc03")
}],
"loop": true,
"name": &"whiteIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("60_ciym7")
}, {
"duration": 1.0,
"texture": ExtResource("61_uq3fr")
}, {
"duration": 1.0,
"texture": ExtResource("62_o7w6d")
}, {
"duration": 1.0,
"texture": ExtResource("63_7xut0")
}, {
"duration": 1.0,
"texture": ExtResource("64_gd78k")
}, {
"duration": 1.0,
"texture": ExtResource("65_7jy7r")
}, {
"duration": 1.0,
"texture": ExtResource("66_hux7v")
}, {
"duration": 1.0,
"texture": ExtResource("67_6oeab")
}],
"loop": true,
"name": &"whiteRun",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_if2ul"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3a7sy"]
size = Vector2(10, 46)

[node name="cookie" type="CharacterBody2D"]
script = ExtResource("1_fe4y1")

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitBox"]
shape = SubResource("CircleShape2D_qi6nh")
debug_color = Color(0.818469, 0.333316, 0.594779, 0.42)

[node name="detectionArea" type="Area2D" parent="."]

[node name="collisor" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(-2, -5)
shape = SubResource("CircleShape2D_2nat3")
debug_color = Color(0.829474, 0.00146394, 0.946416, 0.42)

[node name="collisor2" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(-12, 28)
shape = SubResource("RectangleShape2D_tmf0d")

[node name="collisor3" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(6, 27)
shape = SubResource("RectangleShape2D_tmf0d")

[node name="anim" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("enemy")]
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_73eu5")
animation = &"white2black"
script = ExtResource("69_xwdeg")
enemy = NodePath("..")

[node name="collisor" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, -4)
shape = SubResource("CircleShape2D_if2ul")

[node name="collisor2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-12, 28)
shape = SubResource("RectangleShape2D_3a7sy")

[node name="collisor3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, 27)
shape = SubResource("RectangleShape2D_3a7sy")

[node name="canvasBar" type="CanvasLayer" parent="."]
visible = false

[node name="HealthBar" parent="canvasBar" instance=ExtResource("68_ipd0w")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -34.0
offset_right = 249.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="canvasBar"]
offset_left = 326.0
offset_top = 583.0
offset_right = 382.0
offset_bottom = 606.0
theme_override_fonts/font = ExtResource("69_kg0hp")
theme_override_font_sizes/font_size = 25
text = "BOLACHA"

[node name="killDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("71_2srto")
volume_db = -20.0

[node name="bossDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("72_mg715")
volume_db = -40.0

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("73_0ge2k")
initialState = NodePath("idle")

[node name="idle" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("74_ihnij")
enemy = NodePath("../..")

[node name="chase" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "texture")]
script = ExtResource("75_mc83i")
enemy = NodePath("../..")
texture = NodePath("../../anim")

[node name="transform" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "anim")]
script = ExtResource("77_gygej")
enemy = NodePath("../..")
anim = NodePath("../../anim")

[node name="attack" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "texture")]
script = ExtResource("78_11of4")
enemy = NodePath("../..")
texture = NodePath("../../anim")

[connection signal="body_entered" from="hitBox" to="stateMachine/idle" method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="hitBox" to="stateMachine/chase" method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="detectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="animation_finished" from="anim" to="stateMachine/transform" method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="anim" to="stateMachine/attack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="transformCookieState" from="stateMachine/transform" to="anim" method="_on_transform_transform_cookie_state"]
[connection signal="Transitioned" from="stateMachine/attack" to="stateMachine/attack" method="_on_transitioned"]
